crates/bin/cairo-metrics/benchmarks/openzeppelin/project/packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_no_body.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

None

Diagnostics:

====
Error: Contract module must have a body.
====

AuxData:

None
